<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLighter"
    android:id="@+id/registerRelativeLayout">


    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="53dp"
        android:layout_marginTop="20dp"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cbMember"
        android:layout_below="@+id/header"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/etFullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/etEmail"
        android:layout_below="@+id/etEmail"
        android:ems="10"
        android:hint="@string/fullName"
        android:inputType="textPersonName"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/etUsername"
        android:layout_below="@+id/etUsername"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/etFullname"
        android:layout_below="@+id/etFullname"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/etReenterpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/etPassword"
        android:layout_below="@+id/etPassword"
        android:ems="10"
        android:hint="@string/reEnterPassword"
        android:inputType="textPassword"
        android:textColor="@color/white" />

    <CheckBox
        android:id="@+id/cbMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSend"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp"
        android:text="@string/daTeMember"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/cbMember"
        android:layout_marginBottom="40dp"
        android:onClick="SendRequest"
        android:text="@string/btnSend" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnSend"
        android:layout_alignEnd="@+id/etReenterpassword"
        android:text="@string/btnBack" />

</RelativeLayout>