<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/myCoordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/lib/app"
    android:theme="@style/Theme.AppCompat"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:weightSum="1"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/app_name"
            android:textSize="28sp"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:layout_weight="0.85"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_albin" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/userNameInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryLighter" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/password"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryLighter"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="2dp">

            <Button
                android:id="@+id/login"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@color/colorPrimaryLighter"
                android:onClick="login"
                android:text="@string/login_button" />

            <Button
                android:id="@+id/btnInfo"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorPrimaryLighter"
                android:text="@string/info_button" />
        </LinearLayout>


    <CheckBox
        android:id="@+id/rememberLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_login"
        android:textColor="@color/colorPrimaryLighter"
        android:layout_marginStart="50dp"/>

    <CheckBox
        android:id="@+id/autoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stay_logged_in"
        android:textColor="@color/colorPrimaryLighter"
        android:layout_marginStart="50dp"/>

        <Button
            android:id="@+id/createAccount"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@color/colorPrimaryLighter"
            android:onClick="registerUser"
            android:text="@string/create_new_user_button" />

</LinearLayout>

</android.support.design.widget.CoordinatorLayout>