<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myAdminCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingTop="5dp">
            <Button
                android:id="@+id/btnUsers"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/layout_bg"
                android:padding="3dp"
                android:text="@string/Users"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:onClick="showUsersList"/>

            <Button
                android:id="@+id/btnProducts"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/layout_bg"
                android:padding="3dp"
                android:text="@string/Products"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/layout_bg"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/adminUsername"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/default_user"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/userInfoA"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:gravity="top"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/userInfo"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/layout_bg"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/saldo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saldo"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:onClick="updateBalance"/>

                <TextView
                    android:id="@+id/saldoSum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="updateBalance"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30sp" />
            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/layout_bg"
            android:orientation="vertical">

            <TextView
                android:id="@+id/historyHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/historyHeader"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingEnd="10dp"
                android:paddingStart="10dp">

                <TextView
                    android:id="@+id/historyDateHeader"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/historyDates"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/historyLogHeader"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:text="@string/historyLog"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>

            <ScrollView
                android:id="@+id/historyTransactions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:fadeScrollbars="false"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/historyDate"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/default_data_error"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/historyLog"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
